# RTOS_ECG_AI_Dashboard

./: .gitignore  APPLY_HLS_TUTORIAL_FOR_ECG_DASHBOARD.md  FILE_ALLOCATION_LOG.csv  requirements.txt  run_dashboard.bat  run_dashboard.sh
backend/: app.py  bulk_dataset.py  config.py  ecg_processing.py  inference.py  model_store.py  record_store.py
dataset_import/: README_DATASET_MISSING.md
dataset_import/metadata/: PLACE_FILES_HERE.md  dataset_index.csv  test.csv  val_meta.csv
dataset_import/wfdb_records/: PLACE_FILES_HERE.md
ecg_hls_vitis/: README_VITIS_HLS_V6.txt  hls_config.cfg  run_csim.bat  run_csynth.bat  run_package.bat
ecg_hls_vitis/_ide/: .peers.ini  settings.json  version.ini  workspace_journal.py
ecg_hls_vitis/ecg_fpga_top/: compile_commands.json  hls_config.cfg  vitis-comp.json
ecg_hls_vitis/ecg_fpga_top/ecg_fpga_top/drivers/ecg_fpga_top_v1_0/src/: CMakeLists.txt  Makefile  xecg_fpga_top_sinit.c
ecg_hls_vitis/src/: ecg_fpga_top.cpp  ecg_fpga_top.h  ecg_hls_layers.cpp  ecg_hls_layers.h  main5_dense_only_q4_12_weights.h  pynq_ecg_hls_api_server.py  tb_ecg_fpga_top.cpp
ecg_hls_vivado/ecg_fpga/: ecg_fpga.xpr
fpga/hls/: ecg_accel_hls.bit  fpga_hls_runner.py  pynq_ecg_hls_api_server.py
model_package_input/: PLACE_FILES_HERE.md
record_library/atr/: PLACE_FILES_HERE.md
record_library/dat/: PLACE_FILES_HERE.md
record_library/exports/: PLACE_FILES_HERE.md
record_library/hea/: PLACE_FILES_HERE.md
record_library/metadata/: PLACE_FILES_HERE.md  dataset_index.sqlite  records_index.json
static/: app.js  index.html  styles.css
(+529 files in other folders)
